* Fix: by default, SearchPanel excludes boolean fields for now (until a 3-state checkbox is introduced)
* Impr: made it possible to create new AR records with assigned associations using double-underscore notation, e.g.: Clerk.new(:boss__last_name => "Aguraijuja ")
* Impr: specifying an item for Netzke::Window is now optional

= v0.5.5.1 - 2009-11-09
* Compatibility with latest netzke-core

= v0.5.5 - 2009-11-09
* Compatibility with latest netzke-core
* Regression: pressing "enter" was not submitting the form (FormPanel)
* Regression: "Restore defaults" button was not working in FieldsConfigurator and PropertyEditor
* Fix: excluding columns in FieldConfigurator was causing inconsistent column behavior (move/hide/resize)
* Fix: resolving conflicts with Ext.form.FormPanel's <tt>submit</tt> and <tt>load</tt> methods
* New: rudimentary FileUploadField support in FormPanel (it will do a normal, non-AJAX, form submit)
* New: Netzke::Window widget, supports persistent moving/resizing.
* New: (experimental) GridPanel's "Add in form" button now opens the new Window widget. Later all other windows will be slowly rewritten to do the same.

= v0.5.4 - 2009-10-12
* Dependencies updated

= v0.5.3 - 2009-10-12
* Compatibility with Ext 3.0 (and dropping compatibility with 2.x).
* Compatibility with netzke-core v0.4.4.
* Impr: Form/GridPanel-based widgets: more consistent Ext.Action-related functionality and code, like (context) menu, bbar, etc.
* Impr: GridPanel: <tt>rows_reordering_available</tt> is now true by default.
* Impr: TreePanel now sets "leaf" attribute to true if the node has no children.
* Impr: Grid/TreePanel now have persistent config enabled by default.
* Impr: if persistent_config is disabled, a widget won't be talking to the server in vain any more.
* Fix: GridPanel didn't fire row editing when the first column was a "checkbox" column.
* Fix: the GridPanel's <tt>:scopes</tt> parameter now correctly processes named scopes as strings inside the array, e.g.