@@ -1,7 +1,7 @@
 module Netzke
   # Ext-related module. Some constants provide meta-information about the Ext.library.
   module Ext
-    FORM_FIELD_XTYPES = %w{ textfield numberfield textarea combobox checkbox xdatetime }
+    FORM_FIELD_XTYPES = %w{ textfield numberfield textarea combobox xcheckbox checkbox xdatetime }
     COLUMN_XTYPES = %w{ gridcolumn booleancolumn numbercolumn datecolumn }
   end
 end
